# acpi

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  scratch.md
src/: lib.rs
src/aml/: firmware_lock.rs  mod.rs  object.rs  op_region.rs  resource.rs
tests/: bank_fields.rs  basic.rs  crazy.asl  crazy2.asl  crazy3.asl  crazy4.asl  index_field.asl  index_fields.rs  mh-dsdt.asl  pci_regions.rs  ssdt1.asl  static_assertions.rs  store.asl  test_infra.rs  uacpi_examples.rs
tests/test_infra/: check_cmd_handler.rs  logging_handler.rs  mod.rs
tools/aml_test_tools/: Cargo.toml
tools/aml_test_tools/src/: lib.rs
tools/aml_tester/: Cargo.toml
tools/aml_tester/src/: main.rs
tools/no_alloc_check/: Cargo.toml
tools/no_alloc_check/src/: main.rs  null_handler.rs
