[workspace]
members = ["tools/aml_tester", "tools/acpi_dumper", "tools/aml_test_tools", "tools/uacpi_test_adapter"]
resolver = "2"

[package]
name = "mh-acpi"
version = "0.0.2"
authors = ["Martin Hughes", "Isaac Woods"]
repository = "https://github.com/martin-hughes/acpi"
description = "Forked from Isaac Woods' pure-Rust library for interacting with ACPI"
categories = ["hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bitflags = "2.5.0"
log = "0.4.20"
spinning_top = "0.3.0"
pci_types = "0.10.0"
byteorder = { version = "1.5.0", default-features = false }

[dev-dependencies]
static_assertions = "1.1.0"
aml_test_tools = { path = "tools/aml_test_tools" }
pretty_env_logger = "0.5.0"

[features]
default = ["alloc", "aml"]
alloc = []
aml = ["alloc"]
